# didkit

./: .gitignore  .gitmodules  CHANGELOG.md  CROSS.md  Cargo.toml  DIDKit.podspec  Dockerfile-cli  Dockerfile-http  NOTICE  README.md  build.sh
.cargo/: config
cli/: Cargo.toml  README.md
cli/src/: credential.rs  did.rs  jsonld.rs  key.rs  main.rs  opts.rs  presentation.rs
cli/tests/: .gitignore  cli.rs  credential-unsigned.jsonld  ed25519-key.jwk  example.sh  ion-create-deactivate.sh  ion-create-recover.sh  ion-create-update-svc.sh  ion-create-update-vm.sh  presentation-unsigned.jsonld  ssh-agent.sh
http/: Cargo.toml  Dockerfile  README.md  defaults.toml
http/src/: accept.rs  config.rs  credentials.rs  error.rs  identifiers.rs  keys.rs  lib.rs  main.rs  opts.rs  presentations.rs  utils.rs
http/tests/: example.sh  key.jwk  localConfig.cjs  main.rs  vcApiTestImplementationsConfig.cjs
http/tests/vc-api/: .gitignore  README.md  didkit-http.js  package.json  test.js
http/tests/vc-http-api/: .gitignore  README.md  package.json  test.js
lib/: Cargo.toml  FFI.md  Makefile  cbindgen.toml
lib/android/: AndroidManifest.xml  README.md  build.sh  settings.gradle
lib/android/app/: build.gradle
lib/android/app/src/main/: AndroidManifest.xml
lib/android/didkit/: build.gradle
lib/android/didkit/src/main/: AndroidManifest.xml
lib/android/example/: build.gradle
lib/android/gradle/wrapper/: gradle-wrapper.properties
lib/c/: README.md  test.c
lib/cbindings/: Cargo.toml  README.md  build.rs
lib/cbindings/src/: lib.rs
lib/didkit-go-test/: README.md  didkit.h  go.mod
lib/examples/: did-test-suite.rs
lib/flutter/: .metadata  README.md  libdidkit.dylib  pubspec.yaml
lib/flutter/android/: build.gradle  settings.gradle
lib/flutter/example/: .metadata  README.md  pubspec.yaml
lib/flutter/example/android/app/: build.gradle
lib/flutter/example/ios/Runner/: Info.plist
lib/flutter/example/ios/Runner.xcodeproj/: project.pbxproj
lib/flutter/example/lib/: main.dart
lib/flutter/example/test/: widget_test.dart
lib/flutter/example2/: README.md  pubspec.yaml
lib/flutter/example2/android/app/: build.gradle
lib/flutter/example2/ios/: Podfile
lib/flutter/example2/ios/Runner/: Info.plist
lib/flutter/example2/ios/Runner.xcodeproj/: project.pbxproj
lib/flutter/example2/lib/: main.dart
lib/flutter/example2/linux/: CMakeLists.txt  my_application.cc
lib/flutter/example2/macos/Runner.xcodeproj/: project.pbxproj
lib/flutter/example2/web/: index.html
lib/flutter/example2/windows/: CMakeLists.txt
lib/flutter/example2/windows/runner/: Runner.rc  main.cpp
lib/flutter/example3/: README.md  pubspec.yaml
lib/flutter/example3/android/app/: build.gradle
lib/flutter/example3/ios/Runner/: Info.plist
lib/flutter/example3/ios/Runner.xcodeproj/: project.pbxproj
lib/flutter/example3/lib/: main.dart
lib/flutter/example3/linux/: CMakeLists.txt  my_application.cc
lib/flutter/example3/macos/Runner.xcodeproj/: project.pbxproj
lib/flutter/example3/web/: index.html  manifest.json
lib/flutter/example3/windows/: CMakeLists.txt
lib/flutter/example3/windows/runner/: Runner.rc  main.cpp
lib/flutter/ios/: didkit.podspec
lib/flutter/ios/Classes/: DIDKitFlutterPlugin.h  DIDKitFlutterPlugin.m
lib/flutter/lib/: didkit.dart
lib/flutter/test/: didkit_test.dart
lib/go/: README.md  go.mod  main.go  main_test.go
lib/ios/: README.md
lib/ios/Example/: Podfile
lib/ios/Example/DIDKitSwiftExample/: AppDelegate.swift  SceneDelegate.swift  ViewController.swift
lib/ios/Example/DIDKitSwiftExample.xcodeproj/: project.pbxproj
lib/ios/Example/DIDKitSwiftExample.xcworkspace/: contents.xcworkspacedata
lib/ios/Example/DIDKitSwiftExample/Base.lproj/: Main.storyboard
lib/ios/Sources/DIDKitSwift/: DIDKit.swift  didkit.h
lib/ios/Tests/DIDKitSwiftTests/: DIDKitTests.swift
lib/java/: README.md  build.gradle  settings.gradle
lib/java/com/spruceid/: DIDKit.java
lib/java/main/com/spruceid/: DIDKit.java  DIDKitException.java
lib/java/test/com/spruceid/: DIDKitTest.java
lib/node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
lib/node/lib/: index.d.ts
lib/node/native/: Cargo.toml
lib/node/native/src/: didkit.rs  error.rs  lib.rs
lib/node/src/: didkit.rs  lib.rs
lib/node/test/: index.spec.js
lib/python/: .gitignore  Cargo.toml  README.md  pydidkit.pyi  setup.cfg  setup.py
lib/python/didkit/: __init__.py  libdidkit.dylib  tests.py
lib/python/pydidkit_tests/: README.md  pyproject.toml
lib/python/pydidkit_tests/src/pydidkit_tests/: test_main.py
lib/python/src/: lib.rs
lib/src/: c.rs  did_methods.rs  error.rs  jni.rs  lib.rs  runtime.rs  ssh_agent.rs  util.rs
lib/swift/: DIDKit.podspec
lib/swift/DIDKitSwift.xcodeproj/: project.pbxproj
lib/swift/DIDKitSwift.xcodeproj/xcshareddata/xcschemes/: DIDKitSwift.xcscheme
lib/swift/Sources/DIDKitSwift/: DIDKit.swift  DIDKitSwift.h
lib/swift/Tests/DIDKitSwiftTests/: DIDKitTests.swift
lib/tests/: vc.rs
lib/wasm/: Cargo.toml  README.md
lib/wasm/asm/: .gitignore  asm-loader.js  didkit_wasm_bg.js  didkit_wasm_bg1.js  package-lock.json  package.json  repack.sh  webpack.config.js
lib/wasm/loader/: .eslintrc.js  .gitignore  didkit-loader.js  didkit_wasm_bg.wasm  package.json  webpack.config.js
lib/wasm/loader/test/: index.test.js
lib/wasm/src/: lib.rs
lib/web/: .gitignore  Cargo.toml  Dockerfile  README.md  fat_bundle.sh
lib/web/demo/: README.md  index.html  index.js  noble-secp256k1.js
lib/web/loader/asmjs/: .gitignore  didkit_wasm_bg.js  didkit_wasm_bg1.js  package-lock.json  package.json  repack.sh  webpack.config.js
lib/web/loader/wasm/: didkit-loader.js  didkit_wasm.js  didkit_wasm_bg.wasm  index.html  package-lock.json  package.json
lib/web/script/: build.sh
lib/web/src/: lib.rs
lib/web/test/: README.md  index.html  index.test.js  package-lock.json
macros/: .gitignore  Cargo.toml
macros/src/: lib.rs
node/native/: Cargo.toml
node/native/src/: didkit.rs  lib.rs  macros.rs
wasm/: Cargo.toml  DEPS.md  README.md
wasm/src/: lib.rs
(+232 files in other folders)
