[workspace]
members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
  "lib/web",
]

default-members = [
  "http",
  "cli",
  "lib",
  "lib/cbindings",
]

# $ cargo release
[workspace.metadata.release]
sign-tag = true
tag-prefix = "{{crate_name}}/"
tag-message = "Release {{crate_name}} version {{version}}."
pre-release-commit-message = "Release"
