[package]
name = "didkit-cli"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "Command-line interface for Verifiable Credentials and Decentralized Identifiers."
license = "Apache-2.0"
license-file = "../LICENSE"
keywords = ["ssi", "did", "vc", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/spruceid/didkit/tree/main/cli/"
repository = "https://github.com/spruceid/didkit/"
documentation = "https://docs.rs/didkit-cli/"

exclude = [
  "/tests"
]

[features]
default = ["ring"]
ring = ["ssi/ring"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
didkit = { version = "0.2", path = "../lib", features = ["http-did"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
did-method-key = { version = "0.1", path = "../../ssi/did-key" }
ssi = { version = "0.2", path = "../../ssi", default-features = false }
thiserror = "1.0"
bytes = "1.0"
base64 = "0.12"
sshkeys = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "process"] }
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
percent-encoding = { version = "2.1" }
futures = "0.3"

[[bin]]
path = "src/main.rs"
name = "didkit"
