[package]
name = "didkit-cli"
version = "0.3.2"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "Command-line interface for Verifiable Credentials and Decentralized Identifiers."
license = "Apache-2.0"
keywords = ["ssi", "did", "vc", "cli"]
categories = ["command-line-utilities"]
homepage = "https://github.com/spruceid/didkit/tree/main/cli/"
repository = "https://github.com/spruceid/didkit/"
documentation = "https://docs.rs/didkit-cli/"

exclude = [
  "/tests"
]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
didkit = { version = "0.6", path = "../lib", features = ["http-did"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.4", features = ["derive", "env"] }
sshkeys = "0.3"
anyhow = "1.0"
json-ld = "0.12.1"
rdf-types = "0.12.17"
iref = "2.2.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "process"] }
hyper = { version = "0.14", features = ["server", "client", "http1", "stream"] }
percent-encoding = { version = "2.1" }
futures = "0.3"

[[bin]]
path = "src/main.rs"
name = "didkit"
