[package]
name = "didkit-http"
version = "0.1.0"
authors = ["Charles E. Lehner <charles.lehner@spruceid.com>"]
edition = "2018"

[features]
default = ["ring"]
ring = ["ssi/ring"]

[dependencies]
didkit = { path = "../lib", features = ["http-did"] }
didkit-cli = { path = "../cli" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hyper = { version = "0.14", features = ["server", "client", "http1", "http2", "stream"] }
tower-service = "0.3"
futures-util = { version = "0.3", default-features = false }
ssi = { path = "../../ssi", default-features = false }
percent-encoding = "2.1"

[dev-dependencies]
did-key = { path = "../../ssi/did-key" }
