[package]
name = "didkit-http"
version = "0.1.1"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "HTTP server for Verifiable Credentials and Decentralized Identifiers."
keywords = ["ssi", "did", "vc", "http", "api"]
license = "Apache-2.0"
license-file = "../LICENSE"
categories = ["web-programming::http-server"]
homepage = "https://github.com/spruceid/didkit/tree/main/http/"
repository = "https://github.com/spruceid/didkit/"
documentation = "https://docs.rs/didkit-http/"

exclude = [
  "/tests"
]

[features]
default = ["ring"]
ring = ["ssi/ring"]

[dependencies]
didkit = { version = "0.3", path = "../lib", features = ["http-did"] }
didkit-cli = { version = "^0.1.1", path = "../cli" }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
clap = { version = "3.0", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
hyper = { version = "0.14", features = ["server", "client", "http1", "http2", "stream"] }
tower-service = "0.3"
futures-util = { version = "0.3", default-features = false }
ssi = { version = "0.3", path = "../../ssi", default-features = false }
percent-encoding = "2.1"

[dev-dependencies]
did-method-key = { version = "0.1", path = "../../ssi/did-key" }
