[package]
name = "didkit-http"
version = "0.3.0"
authors = ["Spruce Systems, Inc."]
edition = "2021"
description = "HTTP server for Verifiable Credentials and Decentralized Identifiers."
keywords = ["ssi", "did", "vc", "http", "api"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/spruceid/didkit/tree/main/http/"
repository = "https://github.com/spruceid/didkit/"

exclude = [
  "/tests"
]

[dependencies]
didkit = { version = "0.6", path = "../lib", features = ["http-did"] }

anyhow = "1.0.70"
axum = { version = "0.6.16", features = ["macros", "headers"] }
figment = { version = "0.10.8", features = ["env", "toml"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["trace", "limit"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "2.1.0", features = ["json"] }
serde_urlencoded = "0.7"
url = { version = "2.3.1", features = ["serde"] }
percent-encoding = "2.2.0"
