[package]
name = "didkit"
version = "0.4.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"
description = "Library for Verifiable Credentials and Decentralized Identifiers."
license = "Apache-2.0"
license-file = "LICENSE"
homepage = "https://spruceid.dev/docs/didkit/"
repository = "https://github.com/spruceid/didkit/"
documentation = "https://docs.rs/didkit/"
keywords = ["ssi", "did"]
readme = "README.md"

include = [
  "/src",
  "/README.md",
  "/LICENSE"
]

[features]
default = ["ring", "secp256k1", "p256"]
ring = ["ssi/ring"]
no-ring = ["ssi/ed25519-dalek", "ssi/sha2", "ssi/rsa", "ssi/rand"]
wasm = []
http-did = ["ssi/http-did"]
secp256k1 = ["ssi/libsecp256k1", "did-tz/secp256k1", "did-method-key/secp256k1"]
p256 = ["ssi/secp256r1", "did-tz/p256", "did-webkey/p256", "did-method-key/secp256r1"]

[dependencies]
ssi = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-method-key = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-tz = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-ethr = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-pkh = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-web = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-webkey = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-onion = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
did-ion = { default-features = false, git = "https://github.com/spruceid/ssi", branch = "feat/ucan-0.9" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# TODO feature-gate JNI, or extract it in another crate like we do for Python (and probably WASM as well)
jni = "0.17"
lazy_static = "1.4"
thiserror = "1.0"
base64 = "0.12"
sshkeys = "0.3"
bytes = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
