[package]
name = "didkit-node"
version = "0.2.2"
authors = ["Spruce Systems, Inc."]
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.8.1"

[dependencies]
serde = "1.0"
serde_json = "1.0"

[dependencies.ssi]
version = "0.3"
path = "../../../ssi"

[dependencies.didkit]
version = "0.2.1"
default-features = false
path = "../"

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread"]

[dependencies.neon]
version = "0.8.1"
default-features = false
features = ["napi-6"]

[dependencies.neon-serde]
git = "https://github.com/spruceid/neon-serde"
rev = "408b7253d17a8efd9ce79b8247ac1b4e07174f30"
