[metadata]
name = didkit
version = 0.2.1
author = Spruce Systems, Inc.
author_email = oss@spruceid.com
description = DIDKit python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spruceid/didkit
project_urls =
    Bug Tracker = https://github.com/spruceid/didkit/issues
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft
    Operating System :: MacOS
    Operating System :: POSIX

include_package_data = True

[options]
packages = find:
python_requires = >=3.6
