[metadata]
name = didkit
version = 0.3.0
author = Spruce Systems, Inc.
author_email = oss@spruceid.com
description = DIDKit python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/spruceid/didkit
project_urls =
    Bug Tracker = https://github.com/spruceid/didkit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  deprecated
