[package]
name = "didkit-wasm"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }

[dependencies.didkit]
path = "../"
default-features = false
features = ["wasm"]

[dependencies.ssi]
path = "../../../ssi"
default-features = false
features = ["ed25519-dalek", "sha2", "rsa", "rand", "libsecp256k1", "p256"]

[dependencies.did-method-key]
path = "../../../ssi/did-key"
features = ["secp256k1", "p256"]

[dependencies.did-tz]
path = "../../../ssi/did-tezos"
default-features = false
features = ["secp256k1", "dalek", "p256"]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify", "invoke", "delegate"]

generate = []
issue = []
verify = []
credential = []
presentation = []
delegate = []
invoke = []
zcap = []
