[package]
name = "didkit-wasm"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
edition = "2018"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde_json = "1.0"
thiserror = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.7", features = ["wasm-bindgen"] }
chrono = { version = "0.4", features = ["wasmbind"] }
base64 = "0.12"
k256 = { version = "0.11", features = ["ecdsa"] }
didkit = { path = "../", features = ["secp256k1"] }

[dev-dependencies]
tokio = { version = "*", features = ["macros"] }
wasm-bindgen-test = "0.2"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
default = ["generate", "issue", "verify", "invoke", "delegate"]

generate = []
issue = []
verify = []
credential = []
presentation = []
delegate = []
invoke = []
zcap = []
