[package]
name = "didkit-node"
version = "0.1.0"
authors = ["Spruce Systems, Inc."]
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "didkit_node"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.6.0"

[dependencies]
serde = "1.0"

[dependencies.ssi]
path = "../../../../ssi"

[dependencies.didkit]
path = "../../"
default-features = false

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread"]

[dependencies.neon]
version = "0.8.1"
default-features = false
features = ["napi-4"]

[dependencies.neon-serde]
git = "https://github.com/spruceid/neon-serde"
